# AlephResearch

./: .gitignore  Cargo.toml  HighLevelSet.md  README.md  Webb_IdeaConcept_feedback_.docx  app.py  cdk.context.json  main_app.py  package-lock.json  package.json
aleph-orig/: app.py  folderStructure.md  read.md
aleph-orig/aleph_deployment/: aleph_deployment_stack.py  transaction_proposal_setup.py
aleph-orig/automation/: shutdown_scheduler.py  shutdown_scheduler2.py  shutdown_script.py
aleph-orig/aws/: cdk_infrastructure.ts
aleph-orig/ci_cd/: buildspec.yml  ci_cd_pipeline.py
aleph-orig/database/: create.sql
aleph-orig/database_and_storage/: log_ingestion_script.py  rds_stack.py
aleph-orig/infrastructure/: ec2_instances_stack.py  security_groups.py  vpc_stack.py
aleph-orig/monitoring_and_logging/: logging_configuration.py  monitoring_stack.py
aleph-orig/testing_and_analysis/: results_analysis.py  (+1 more)
aleph_deployment/: .transaction_proposal_setup.py  aleph_deployment_stack.py  testCreds.sh
automation/: shutdown_scheduler.py  shutdown_script.py
database_and_storage/: log_ingestion_script.py  rds_stack.py
examples/: config-example.toml
infrastructure/: ec2_instances_stack.py  security_groups.py  vpc_stack.py
monitoring_and_logging/: logging_configuration.py  monitoring_stack.py
notes_and_examples/: deployInfrastructurenotes.txt  deployedInfrastructure.py  ec2_instances_stack.py  folderStructure.md  whatOurDatabseNeeds.txt
rust/: Cargo.toml
src/: alephRBC.rs  generate_keys.rs  node_discovery.rs
testing_and_analysis/: test_runner.py
(+1 files in other folders)
